# TestTaskMA

./: README.md  products.json  pyproject.toml
src/: config.py  main.py
src/script/: repository.py  service.py
